--- a/contato.html
+++ b/contato.html
@@ -4,30 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
     <li><a href="paginaUm.html">Home</a></li>
 
-    <h1>Meu contato</h1>
-    
-    <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email">
-        <br>
-        <br>
-        <label for="Assunto">Assunto:</label>
-        <textarea name="" id="" cols="60" rows="5"></textarea>
-<br>
-<br>
-<button>Enviar</button>
-    </form>
+    <h1 class="center">Meu contato</h1>
 
-    <h2>Endereço:</h2>
+    <div class="container mb-50">
+
+        <div>
+
+        <form>
+            <label for="nome">Nome:</label> <br>
+            <input type="text" id="nome">
+            <br>
+            <br>
+            <label for="email">Email:</label> <br>
+            <input type="email" id="email">
+            <br>
+            <br>
+            <label for="assunto">Assunto:</label> <br>
+            <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+    <br>
+    <br>
+    <button>Enviar</button>
+    </form>
+         </div>
+
+         <div class="ml-50">
+
+   
+        <h2>Endereço:</h2>
 
     <p> R Alice Arbex, 46</p>
     <p>São José dos Campos - Sp</p>
@@ -40,6 +49,35 @@
     allowfullscreen="" 
     loading="lazy" 
     eferrerpolicy="no-referrer-when-downgrade">
-</iframe>
+    </iframe>
+    </div>
+
+    </div>
+
+    <hr>
+<footer>
+    <div class="container">
+
+        <a href="https://www.facebook.com/taainamelloo/" target="_blank">
+            <img class="tm-social p-one" src="assets/img/facebook.png" alt="Facebook">
+        </a>
+
+        <a href="https://www.linkedin.com/in/tainara-mello-8068b1185/" target="_blank">
+            <img class="tm-social p-one" src="assets/img/linkedin.png" alt="Linkedin">
+        </a>
+
+        <a href="https://www.instagram.com/tainaraamello/" target="_blank">
+            <img class="tm-social p-one" src="assets/img/instagram.png" alt="Instagram">
+        </a>
+
+
+    </div>
+<p class="center">
+    Todos os direitos reservados: Tainara Mello &copy 
+</p>
+</footer>
+
+<script src="js/script.js"></script>
+
 </body>
 </html>
