--- a/paginaUm.html
+++ b/paginaUm.html
@@ -49,7 +49,7 @@
 
 
 <div>
-    <iframe class="p-one centro"
+    <iframe class="p-one centro mb-50"
 width="560" 
 height="315" 
 src="https://www.youtube.com/embed/SC4xMk98Pdc?start=18" 
@@ -59,7 +59,29 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 allowfullscreen>
 </iframe>
 </div>
+<hr>
+<footer>
+    <div class="container">
+
+        <a href="https://www.facebook.com/taainamelloo/" target="_blank">
+            <img class="tm-social p-one" src="assets/img/facebook.png" alt="Facebook">
+        </a>
+
+        <a href="https://www.linkedin.com/in/tainara-mello-8068b1185/" target="_blank">
+            <img class="tm-social p-one" src="assets/img/linkedin.png" alt="Linkedin">
+        </a>
+
+        <a href="https://www.instagram.com/tainaraamello/" target="_blank">
+            <img class="tm-social p-one" src="assets/img/instagram.png" alt="Instagram">
+        </a>
 
 
+    </div>
+<p class="center">
+    Todos os direitos reservados: Tainara Mello &copy 
+</p>
+</footer>
+
+  
 </body>
 </html>
